# zk-soroban-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/ark_mimc_bls12381_verifier/: Cargo.toml
contracts/ark_mimc_bls12381_verifier/src/: lib.rs
contracts/ark_mimc_bn254_verifier/: Cargo.toml
contracts/ark_mimc_bn254_verifier/src/: lib.rs
contracts/ark_verifier/: Cargo.toml
contracts/ark_verifier/src/: lib.rs  test.rs
contracts/arkworks_verifier/: Cargo.toml
contracts/arkworks_verifier/src/: lib.rs
contracts/circom_verifier/: Cargo.toml
contracts/circom_verifier/src/: test.rs
contracts/cubic_gnark_bin_verifier/: Cargo.toml
contracts/cubic_gnark_json_verifier/: Cargo.toml
contracts/cubic_gnark_json_verifier/src/: lib.rs
contracts/gnark_bn254_verifier/src/: lib.rs  test.rs
contracts/gnark_verifier/: Cargo.toml
contracts/gnark_verifier/src/: lib.rs  test.rs
data/ark_mimc/: Cargo.toml
data/ark_mimc/artifacts/bls12_381/: groth16_artifacts.json  proof.json  verification_key.json
data/ark_mimc/artifacts/bn254/: groth16_artifacts.json  proof.json  verification_key.json
data/ark_mimc/src/: main.rs
data/arkworks/: proof.json  verification_key.json
data/gnark/: proof.json  verification_key.json
data/gnark_bn254/: README.md  proof.json  verification_key.json
data/gnark_cubic/: go.mod  go.sum  main.go  main_test.go  proof.json  proof_gnark.json  public.json  verification_key.json  verification_key_gnark.json
